# diffusion_policy_piper

./: .gitignore  LICENSE  README.md  REAL_DATASET_FORMAT.md  environment.yaml  eval_piper_real_robot.py  pyproject.toml  pyrightconfig.json  train.py
diffusion_policy/: __init__.py
diffusion_policy/common/: normalize_util.py
diffusion_policy/config/: train_diffusion_unet_piper_real_image_workspace.yaml  train_diffusion_unet_piper_zarr_real_image_workspace.yaml
diffusion_policy/config/task/: piper_real_image.yaml  piper_zarr_real_image.yaml
diffusion_policy/dataset/: __init__.py  piper_hdf5_image_dataset.py  piper_zarr_image_dataset.py
diffusion_policy/env_runner/: __init__.py  piper_image_runner.py
diffusion_policy/model/: __init__.py
diffusion_policy/model/common/: __init__.py
diffusion_policy/model/diffusion/: __init__.py
diffusion_policy/model/vision/: __init__.py  model_getter.py
diffusion_policy/policy/: __init__.py
diffusion_policy/scripts/: __init__.py  check_piper_hdf5_dataset.py  check_piper_zarr_dataset.py  convert_piper_hdf5_to_zarr.py
diffusion_policy/workspace/: __init__.py
