[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-diffusion-policy"
version = "0.1.0"
description = "Diffusion Policy training and real-robot inference for the AgileX/Songling Piper arm."
readme = "README.md"
requires-python = ">=3.9,<3.11"
authors = [{ name = "gx4070" }]
license = { text = "MIT" }
dependencies = [
  "torch",
  "torchvision",
  "diffusers==0.11.1",
  "huggingface-hub<0.26",
  "hydra-core==1.2.0",
  "omegaconf",
  "numpy<2",
  "scipy",
  "opencv-python",
  "h5py",
  "zarr",
  "numcodecs",
  "einops",
  "wandb",
  "dill",
  "tqdm",
  "threadpoolctl",
  "click",
  "python-can==4.6.1"
]

[project.scripts]
piper-dp-train = "train:main"
piper-dp-eval-real = "eval_piper_real_robot:main"

[tool.setuptools]
py-modules = ["train", "eval_piper_real_robot"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["diffusion_policy*"]

[tool.setuptools.package-data]
diffusion_policy = [
  "config/*.yaml",
  "config/task/*.yaml"
]

[tool.pyright]
include = ["diffusion_policy", "train.py", "eval_piper_real_robot.py"]
exclude = ["data", "outputs", "**/__pycache__"]
